--- a/packages.config
+++ b/packages.config
@@ -5,4 +5,5 @@
   <package id="LiveCharts.Wpf" version="0.9.7" targetFramework="net472" />
   <package id="MaterialDesignColors" version="2.0.4" targetFramework="net472" />
   <package id="MaterialDesignThemes" version="4.3.0" targetFramework="net472" />
+  <package id="MaterialSkin.Updated" version="0.2.2" targetFramework="net472" />
 </packages>
