--- a/DocsControl.csproj
+++ b/DocsControl.csproj
@@ -126,7 +126,6 @@
       <DependentUpon>202203100604252_updateDocPathaddColumnDocStatusTag.cs</DependentUpon>
     </Compile>
     <Compile Include="Model\Addressee.cs" />
-    <Compile Include="Model\DocDataList.cs" />
     <Compile Include="Model\DocPath.cs" />
     <Compile Include="Model\Modules.cs" />
     <Compile Include="ViewModel\vmDocuments.cs" />
@@ -171,6 +170,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Style\DataGrid.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="View\vDashboard.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
