--- a/DocsControl.csproj
+++ b/DocsControl.csproj
@@ -125,6 +125,10 @@
     <Compile Include="Migrations\202203100604252_updateDocPathaddColumnDocStatusTag.designer.cs">
       <DependentUpon>202203100604252_updateDocPathaddColumnDocStatusTag.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202203210151076_updateDocDataDateTimeColumntoString.cs" />
+    <Compile Include="Migrations\202203210151076_updateDocDataDateTimeColumntoString.designer.cs">
+      <DependentUpon>202203210151076_updateDocDataDateTimeColumntoString.cs</DependentUpon>
+    </Compile>
     <Compile Include="Model\Addressee.cs" />
     <Compile Include="Model\DocPath.cs" />
     <Compile Include="Model\Modules.cs" />
@@ -249,6 +253,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202203100604252_updateDocPathaddColumnDocStatusTag.resx">
       <DependentUpon>202203100604252_updateDocPathaddColumnDocStatusTag.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202203210151076_updateDocDataDateTimeColumntoString.resx">
+      <DependentUpon>202203210151076_updateDocDataDateTimeColumntoString.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
