finalized viewing of pdf doc

--- a/DocsControl.csproj
+++ b/DocsControl.csproj
@@ -132,6 +132,7 @@
     <Compile Include="Model\Addressee.cs" />
     <Compile Include="Model\DocPath.cs" />
     <Compile Include="Model\Modules.cs" />
+    <Compile Include="Model\Routes.cs" />
     <Compile Include="ViewModel\vmDocuments.cs" />
     <Compile Include="ViewModel\vmOutgoing.cs" />
     <Compile Include="View\vDashboard.xaml.cs">
