--- a/packages.config
+++ b/packages.config
@@ -6,4 +6,5 @@
   <package id="MaterialDesignColors" version="2.0.4" targetFramework="net472" />
   <package id="MaterialDesignThemes" version="4.3.0" targetFramework="net472" />
   <package id="MaterialSkin.Updated" version="0.2.2" targetFramework="net472" />
+  <package id="Microsoft.Office.Interop.Excel" version="15.0.4795.1000" targetFramework="net472" />
 </packages>
