--- a/DocsControl.csproj
+++ b/DocsControl.csproj
@@ -28,7 +28,7 @@
     <UpdatePeriodically>false</UpdatePeriodically>
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
-    <ApplicationRevision>12</ApplicationRevision>
+    <ApplicationRevision>13</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -205,6 +205,7 @@
     </Compile>
     <Compile Include="Model\Activities.cs" />
     <Compile Include="Model\Addressee.cs" />
+    <Compile Include="Model\DashboardData.cs" />
     <Compile Include="Model\Directories.cs" />
     <Compile Include="Model\DocPath.cs" />
     <Compile Include="Model\IncomingClass.cs" />
